working backend, building front

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,29 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>PeopleGetter</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script defer src="app.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Team Builder</title>
 </head>
+<h1>CHOOSE YOUR TEAM</h1>
 <body>
-    <header>
-        <h1>Welcome to PeopleGetter</h1>
-    </header>
-
-    <main>
-        <button id="listBtn">Get Everyone</button>
-        <div id="listContainer"></div>
-
-        <div class="dropdown">
-          <label for="userSelect" id="userDropdownBtn">Get Someone</label>
-            <div id="userDropdownContent">
-                <select id="userSelect">
-                    <option value="">-- Select a number --</option>
-                    <!-- Generate options dynamically using JavaScript -->
-                </select>
-            </div>
-            <div id="userContainer"></div>
-        </div>
-    </main>
+    <div id="container1">
+    <button id="Generator">Push to choose your fate</button>
+    </div>
+    <div id="container2"></div>
+    <div id=""container3></div>
 </body>
 </html>
