--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Team Builder</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Team Generator</title>
 </head>
-<h1>CHOOSE YOUR TEAM</h1>
 <body>
-    <div id="container1">
-    <button id="Generator">Push to choose your fate</button>
-    </div>
-    <div id="container2"></div>
-    <div id=""container3></div>
+  <h1>Team Generator</h1>
+  <button id="Generator">Generate a Team Name</button>
+  <div id="output">Click the button to get a team name!</div>
+  <script src="app.js"></script>
 </body>
 </html>
