--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <h1>Team Generator</h1>
-  <button id="Generator">Generate a Team Name</button>
-  <div id="output">Click the button to get a team name!</div>
+  <button id="Generator">Generate a Team </button>
+  <div id="output">Click the button to get a team and team name!</div>
   <script src="app.js"></script>
 </body>
 </html>
